@@ -1,22 +1,4 @@
-#
-# = Helperful
-#
-# A collection of useful Rails helpers.
-#
-#
-# Category::    Rails
-# Package::     Helperful
-# Author::      Simone Carletti <weppos@weppos.net>
-# Copyright::   2007-2008 The Authors
-# License::     MIT License
-#
-#--
-#
-#++
-
-
 require 'test_helper'
-
 
 class HelperfulTest < Test::Unit::TestCase
 
