@@ -1,23 +1,5 @@
-#
-# = Helperful
-#
-# A collection of useful Rails helpers.
-#
-#
-# Category::    Rails
-# Package::     Helperful
-# Author::      Simone Carletti <weppos@weppos.net>
-# Copyright::   2007-2008 The Authors
-# License::     MIT License
-#
-#--
-#
-#++
-
-
 require 'test_helper'
 require 'helperful_title_helper'
-
 
 class TitleHelperTest < Test::Unit::TestCase
   include HelperfulTitleHelper
